# Kibo

./: .cspell.json  .gitignore  package.json
apps/macos-companion/cyberpet/: .env.example  .pre-commit-config.yaml  CLAUDE.md  LICENSE  MEMORY.md  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/macos-companion/cyberpet/.claude/skills/apple-design/: SKILL.md
apps/macos-companion/cyberpet/.claude/skills/code-review/: SKILL.md
apps/macos-companion/cyberpet/.claude/skills/debug/: SKILL.md
apps/macos-companion/cyberpet/.claude/skills/design/: SKILL.md
apps/macos-companion/cyberpet/.claude/skills/docs-sync/: SKILL.md
apps/macos-companion/cyberpet/.claude/skills/face-tracking/: SKILL.md
apps/macos-companion/cyberpet/.claude/skills/git-worktree/: SKILL.md
apps/macos-companion/cyberpet/.github/workflows/: security.yml  staging.yml
apps/macos-companion/cyberpet/apps/macos-companion/: package.json
apps/macos-companion/cyberpet/docs/: hindsight.md  primer.md  privacy.md  references.md  security.md  spec.md
apps/macos-companion/cyberpet/docs/backlog/: claude_code_build_guide.csv  claude_code_build_guide_detailed.csv
apps/macos-companion/cyberpet/docs/design/: DESIGN.md  XIAOMI_DESIGN.md
apps/macos-companion/cyberpet/services/face-tracker/: main.py  requirements.txt
apps/macos-companion/cyberpet/src/: cyberpet-main.ts  index.html  styles.css
apps/macos-companion/cyberpet/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/macos-companion/cyberpet/src-tauri/src/: lib.rs  main.rs
scripts/: setup-hooks.sh
(+11 files in other folders)
