[package]
name = "cyberpet"
version = "0.1.0"
description = "Local-first macOS companion that animates a reactive robot mascot using camera-driven facial geometry."
authors = ["Raphael <raphael@paaolms.com>"]
license = "MIT"
repository = "https://github.com/m-raphael/cyberpet"
edition = "2021"
rust-version = "1.77"

[lib]
name = "cyberpet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
